dist_man1_MANS=

if BUILD_MONEYROCKETD
  dist_man1_MANS+=moneyrocketd.1
endif

if ENABLE_QT
  dist_man1_MANS+=moneyrocket-qt.1
endif

if BUILD_MONEYROCKET_CLI
  dist_man1_MANS+=moneyrocket-cli.1
endif

if BUILD_MONEYROCKET_TX
  dist_man1_MANS+=moneyrocket-tx.1
endif

if BUILD_MONEYROCKET_UTIL
  dist_man1_MANS+=moneyrocket-util.1
endif

if ENABLE_WALLET
if BUILD_MONEYROCKET_WALLET
  dist_man1_MANS+=moneyrocket-wallet.1
endif
endif
